# kokkos-stdexec-examples

./: CMakeLists.txt  README.md
cgsolve/: CMakeLists.txt  cgsolve.cpp  cgsolve_graph.cpp  cgsolve_stdexec.cpp  generate_matrix.hpp
fibonacci/: fibonacci.cpp  fibonacci_workgraph.cpp
modules/: FindARGOBOTS.cmake  FindQTHREADS.cmake  flags.cmake
scripts/: apply-clang-format
simplegraph/: CMakeLists.txt  testgraph.cpp
simpletask/: CMakeLists.txt  taskscheduler.cpp  taskscheduler_single.hpp
ultbackends/: CMakeLists.txt  argparsing.h  stdexec.cpp
