foreach(DIR ${CMAKE_CURRENT_SOURCE_DIR})
  file(GLOB _HEADERS ${DIR}/*.hpp)
  file(GLOB _SOURCES ${DIR}/*.cpp)
  list(APPEND HEADERS ${_HEADERS})
  list(APPEND SOURCES ${_SOURCES})
endforeach()

foreach(SRC_FILE ${SOURCES})
  get_filename_component(SRC_FILE_NAME ${SRC_FILE} NAME)
  string(REGEX REPLACE "\\.[^.]*$" "" SRC_FILE_NAME ${SRC_FILE_NAME})
  add_executable(${SRC_FILE_NAME} ${SRC_FILE} ${HEADERS})
  target_include_directories(${SRC_FILE_NAME} PRIVATE ${HEADER_DIRS})
  target_link_libraries(${SRC_FILE_NAME} PRIVATE Kokkos::kokkoscore)
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(${SRC_FILE_NAME} PUBLIC "DEBUG")
    message(STATUS "CMAKE_BUILD_TYPE=DEBUG")
  endif()
endforeach()