if(KSEE_ENABLE_QTHREADS)
  find_package(QTHREADS REQUIRED)
  set(KSEE_ULT_BACKEND "KSEE_ENABLE_QTHREADS")
endif()

if(KSEE_ENABLE_ENABLE_PIKA)
  find_package(PIKA REQUIRED)
  set(KSEE_ULT_BACKEND "KSEE_ENABLE_PIKA")
endif()

if(KSEE_ENABLE_ENABLE_ARGOBOTS)
   find_package(ARGOBOTS REQUIRED)
   set(KSEE_ULT_BACKEND "KSEE_ENABLE_ARGOBOTS")
endif()

foreach(DIR ${CMAKE_CURRENT_SOURCE_DIR})
  file(GLOB _HEADERS ${DIR}/*.hpp)
  file(GLOB _SOURCES ${DIR}/*.cpp)
  list(APPEND HEADERS ${_HEADERS})
  list(APPEND SOURCES ${_SOURCES})
endforeach()

add_compile_options(-std=c++20)

foreach(SRC_FILE ${SOURCES})
  get_filename_component(SRC_FILE_NAME ${SRC_FILE} NAME)
  string(REGEX REPLACE "\\.[^.]*$" "" SRC_FILE_NAME ${SRC_FILE_NAME})
  add_executable(${SRC_FILE_NAME} ${SRC_FILE} ${HEADERS})
  target_compile_definitions(${SRC_FILE_NAME} PUBLIC KOKKOS_REMOTE_SPACES_ENABLE_DEBUG)
  target_include_directories(${SRC_FILE_NAME} PRIVATE ${HEADER_DIRS})
  target_link_libraries(${SRC_FILE_NAME} STDEXEC::stdexec)
  target_compile_definitions(${SRC_FILE_NAME} PUBLIC ${KSEE_ULT_BACKEND})
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(${SRC_FILE_NAME} PUBLIC "DEBUG")
    message(STATUS "CMAKE_BUILD_TYPE=DEBUG")
  endif()
endforeach()